--- a/local/templates/o-tula/css/style.css
+++ b/local/templates/o-tula/css/style.css
@@ -23,7 +23,9 @@ body {
 
 html, body, #page {
     height: 100%;
-    min-width: 1346px
+    width: 100%;
+    max-width: 100%;
+    min-width: 70%;
 }
 
 .site-inner {
