--- a/local/templates/o-tula inner/css/style.css
+++ b/local/templates/o-tula inner/css/style.css
@@ -25,7 +25,7 @@ html, body, #page {
     height: 100%;
     width: 100%;
     max-width: 100%;
-    min-width: 70%;
+    min-width: 1130px;
 }
 
 .site-inner {
@@ -391,6 +391,8 @@ a.disabled {
     padding: 10px 0px 0px 10px;
     line-height: 0px;
     background: #43c7db;
+}  .guest_tabs .all_posts .active{
+   color:#fff;
 }
 
 .guest_tabs a {
@@ -548,6 +550,7 @@ li.comment:last-child {
 .all_posts.active {
     width: 100% !important;
     background: #43c7db;
+    color: white;
 }
 .entry-content {
     font-size: 17px;
