--- a/local/templates/o-tula/css/style.css
+++ b/local/templates/o-tula/css/style.css
@@ -25,7 +25,7 @@ html, body, #page {
     height: 100%;
     width: 100%;
     max-width: 100%;
-    min-width: 70%;
+    min-width: 1130px;
 }
 
 .site-inner {
