--- a/local/templates/o-tula inner/css/style.css
+++ b/local/templates/o-tula inner/css/style.css
@@ -557,3 +557,4 @@ li.comment:last-child {
     font-family: 'Roboto', sans-serif;
     letter-spacing: -0.8px;
 }
+.show_photo{padding-bottom: 40px;}
