CP-7426:fix newslist template on main page, fix judges/mos templates, add newslist template for guests section, add form for creating elements of infoblocks by each user, start editing template for serevnovaniya section

--- a/local/templates/o-tula inner/css/style.css
+++ b/local/templates/o-tula inner/css/style.css
@@ -486,7 +486,7 @@ article.post, .news_post {
     }
 }
 span.post_author_my {
-    background: url(img/econ.png);
+    background: url(/upload/econ.png);
     display: block;
     background-repeat: no-repeat;
     padding-left: 18px;
